--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/symfony": ">=2.1",
-        "doctrine/doctrine-bundle": "*"
+        "doctrine/mongodb-odm-bundle": "3.0.*@dev"
     },
     "minimum-stability": "dev",
     "autoload": {
